--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,36 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
 body{
-    background: white;
+    background: rgba(0, 185, 56, 0.74);
+}
+
+.container {
+    margin-left: 500px;
+    margin-right: 500px;   
+    margin-top: 50px;
+}
+
+.card {
+    height: 500px;
+    width: 350px;
+    border-radius: 18px; 
+}
+
+.color-naipe-top{
+    color: none;
+    margin-top: 0px;
+    font-size: 100px;
+}
+
+.color-naipe-bot{
+    color: none;
+    font-size: 100px;
+    margin-bottom: 0;
+    transform: rotate(180deg);
+    
+}
+
+.numero-random{
+    font-size: 100px;
+    margin: auto;
 }
